# shale-gas-analyzer

./: .env.example  .gitignore  CHANGELOG.md  README.md  agent_console.py  pyproject.toml  requirements.txt  shale_gas_production_report.md  start_project.py
data/: README.md  X2.csv
frontend/: app.js  index.html  styles.css
knowledge_base/manual_notes/: 01_井底积液与携液能力诊断.md  02_泡沫排水采气.md  03_柱塞气举.md  04_间歇生产与制度优化.md  05_产量递减与生产预测.md  06_措施优先级与决策规则.md  07_RAG检索问题模板.md  README_使用说明.md
src/shale_gas_analyzer/: __init__.py  crew.py  main.py
src/shale_gas_analyzer/config/: agents.yaml  tasks.yaml
src/shale_gas_analyzer/rag/: __init__.py  build_index.py  chunker.py  embeddings.py  manifest.py  paths.py  pdf_loader.py  retriever.py  text_cleaner.py
src/shale_gas_analyzer/tools/: __init__.py  data_reader.py  data_utils.py  decline_calc.py  rag_retriever.py
