[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shale-gas-analyzer"
version = "0.1.0"
description = "CrewAI multi-agent shale gas production analysis system."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.28.0",
    "pandas",
    "numpy",
    "litellm",
    "python-dotenv",
]

[project.scripts]
shale-gas-analyzer = "shale_gas_analyzer.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shale_gas_analyzer = ["config/*.yaml"]
